compiler/tests/invalid_programs/invalid_assignment_type.jm
!TypeError

var = "Foo"
var = 12
